# AtomicVibe

./: .gitignore  CLAUDE.md  LICENSE  README.md
architect/: README.md  pyproject.toml
architect/frontend/: electron-builder.yml  electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
architect/frontend/dist-electron/electron/: main.js  preload.js
architect/frontend/electron/: main.ts  preload.ts
architect/frontend/src/: App.tsx  global.d.ts  main.css
architect/frontend/src/api/: agents.ts  client.ts  diff.ts  execute.ts  plan.ts  preview.ts  settings.ts  types.ts  vibe.ts
architect/frontend/src/components/: ApiKeySetup.tsx  ChatMessage.tsx  ChatPanel.tsx  ChoiceSelector.tsx  DiffPanel.tsx  DiffViewer.tsx  FileTree.tsx  MenuBar.tsx  ProgressTracker.tsx  SidePanel.tsx  StatusBar.tsx  TerminalEmulator.tsx  TitleBar.tsx
architect/frontend/src/context/: AppContext.tsx
architect/frontend/src/hooks/: useWebSocket.ts
architect/src/architect/: __init__.py  __main__.py  config.py  main.py
architect/src/architect/core/: __init__.py  exceptions.py  logging.py  models.py
architect/src/architect/execute/: __init__.py  dispatcher.py  engine.py  fixer.py  knowledge.py  states.py  validator.py  workspace.py
architect/src/architect/generate/: __init__.py  engine.py  states.py
architect/src/architect/llm/: __init__.py  cost_tracker.py  models.py  router.py  tiers.py
architect/src/architect/ui/: app.py  (+5 more)
architect/tests/integration/: test_cli.py  test_e2e.py  test_full_e2e.py  test_real_projects.py  test_web_ui.py
(+83 files in other folders)
